Fix horizontal scroll on mobile (#1113)
* Fix horizontal scroll on mobile

* add only to html

* restore moon on mobile

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1378,6 +1378,10 @@ table td {
             font-size: 14px;
         }
     }
+
+    html {
+        overflow-x: hidden;
+    }
 }
 
 .card-elevated {
